[tool.poetry]
name = "muni-is-api"
version = "0.8.1"
license = "MIT"
readme = "README.md"
description = "Python wrapper for the IS MUNI API"
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]
homepage = "https://github.com/pestanko/py-is-muni-api"
repository = "https://github.com/pestanko/py-is-muni-api"
keywords = ["api", "muni", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
coloredlogs = "^10.0"
lxml = "^4.4"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
rope = "^0.14.0"
pylint = "^2.4"
autopep8 = "^1.4"
responses = "^0.10.9"
coveralls = "^1.10"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
